--- a/Townie/res/values/strings.xml
+++ b/Townie/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Townie</string>
     <string name="menu_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hola Townie</string>
 
 </resources>
